// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component <FileInput /> rendering should render no upload field when not visible 1`] = `
<div
  className=""
/>
`;

exports[`Form component <FileInput /> rendering should render upload field correctly 1`] = `
<div
  className="row"
>
  <div
    className="col-12 mode_input file"
  >
    <Header
      getError={[MockFunction]}
      hasError={[MockFunction]}
      meta={
        Object {
          "isVisible": true,
          "name": "input-field-name",
          "submitLabel": "upload file",
        }
      }
      touched={false}
    >
      <div
        className="invoer"
      >
        <input
          id="formUpload"
          onChange={[Function]}
          type="file"
        />
        <label
          className="secundary-blue"
          htmlFor="formUpload"
        >
          upload file
        </label>
      </div>
    </Header>
  </div>
</div>
`;

exports[`Form component <FileInput /> rendering should render upload field with selected file correctly 1`] = `
<div
  className="row"
>
  <div
    className="col-12 mode_input file"
  >
    <Header
      getError={[MockFunction]}
      hasError={[MockFunction]}
      meta={
        Object {
          "isVisible": true,
          "name": "input-field-name",
          "submitLabel": "upload file",
        }
      }
      touched={false}
    >
      <div
        className="file-input__preview"
      >
        <button
          className="file-input__button-delete link-functional delete"
          onClick={[Function]}
        />
        <img
          alt="Preview uploaded foto"
          className="file-input__preview-image"
          src="blob:http://host/c00d2e14-ae1c-4bb3-b67c-86ea93130b1c"
        />
      </div>
    </Header>
  </div>
</div>
`;
